Fix parent scrollbar issue

--- a/static/style.css
+++ b/static/style.css
@@ -39,3 +39,7 @@
 #footer a {
   color: black;
 }
+
+body {
+  overflow-y: hidden;
+}
